# local_navigation

./: README.md  intelRos_install.sh  pcl_install  rosp_ros2.sh
ADDA_raspberry/: HighPrecision_ADDA.py  HighPrecision_ADDA_RaspberryDouble.py  README.md
ADDA_upboard/: HighPrecision_ADDA_UpDouble.py  README.md  test.py
CAN_reading/: can_plot.py  can_plot_l_r.py  can_reading.py  plot_trajectory.py  record.csv  test.py  trajectoryPlot.py  untitled.py
Torso_experiment/: Questionnaire.m
Torso_experiment/Questionnaires_results/: Questionnaire results.docx  boxplot_test_ques.m  perceptions_analysis.m  perceptions_analysis1.m  plotBoxPlot.m  questionanarie_qolo_T1.xlsx  questionnaire.m
Torso_experiment/Questionnaires_results/Figures/: Animacy.eps  Anthropomorphism.eps  Likeability.eps  Perceived Intelligence.eps  Perceived safety.eps  SUS.eps
YAMAHack-master/EAGLE_PCB/CIME_YamaHACK/: eagle.epf  yamaHACK.b$1  yamaHACK.b$2  yamaHACK.brd  yamaHACK.s$$  yamaHACK.s$2  yamaHACK.sch
YAMAHack-master/EAGLE_PCB/PCB_YamaHACK2/: yamaHACK.b#1  yamaHACK.b#2  yamaHACK.b#3  yamaHACK.b#4  yamaHACK.b#5  yamaHACK.b#6  yamaHACK.b#7  yamaHACK.b#8  yamaHACK.b#9  yamaHACK.brd  yamaHACK.cmp  yamaHACK.drd  yamaHACK.dri  yamaHACK.emp  yamaHACK.gpi  yamaHACK.out  yamaHACK.s#1  yamaHACK.s#3  yamaHACK.s#4  yamaHACK.s#5  yamaHACK.s#6  yamaHACK.s#7  yamaHACK.s#8  yamaHACK.s#9  yamaHACK.sch  yamaHACK.sol  yamaHACK.sts
YAMAHack-master/EAGLE_PCB/PCB_YamaHACK3/: yamaHACK.b#1  yamaHACK.b#2  yamaHACK.b#3  yamaHACK.b#4  yamaHACK.b#5  yamaHACK.b#6  yamaHACK.b#7  yamaHACK.b#8  yamaHACK.b#9  yamaHACK.b$3  yamaHACK.b$4  yamaHACK.b$5  yamaHACK.b$6  yamaHACK.brd  yamaHACK.cmp  yamaHACK.drd  yamaHACK.dri  yamaHACK.emn  yamaHACK.gpi  yamaHACK.out  yamaHACK.s#1  yamaHACK.s#2  yamaHACK.s#3  yamaHACK.s#4  yamaHACK.s#5  yamaHACK.s#6  yamaHACK.s#7  (+7 more)
YAMAHack-master/PC_Library/: README.md  YamaHack.pro  YamaHack.pro.user.4.10-pre1  YamaHack.pro.user.835f3d4  YamaHack.pro.user.835f3d4.22  YamaHack.pro.user.a295134  Yamahack.cpp
YAMAHack-master/build-YamaHack-Desktop_Qt_5_12_3_clang_64bit-Debug/: .qmake.stash  Makefile  moc_Yamahack.cpp  moc_predefs.h
YAMAHack-master/build-yamahack2-Desktop_Qt_5_12_3_clang_64bit-Debug/: Makefile  moc_Form_yamahack.cpp  moc_Yamahack.cpp  ui_Form_yamahack.h
YAMAHack-master/yamahack_Interface/: Form_yamahack.cpp  Form_yamahack.h  Form_yamahack.ui  Yamahack.h  main.cpp  yamahack2.pro  yamahack2.pro.user.835f3d4.22
catkin_ws/: README.md
catkin_ws/rviz_config/: config1.rviz
catkin_ws/src/realsense/pcd_read/: .pcd_read.cpp.swp  CMakeLists.txt  package.xml
catkin_ws/src/realsense/pcd_read/src/: first_pcd0.pcd  pcd_read.cpp
catkin_ws/src/realsense/train/: CMakeLists.txt  package.xml
catkin_ws/src/realsense/train/src/: train.cpp
embodied_control/: HighPrecision_ADDA.py
install/: README.md  intelRos_install.sh  realsense_install_melodic.sh  ros_install_melodic.sh
motion_planning/: HighPrecision_ADDA.py  pressure_sensor6_v4.py
motion_tracking_simulation/: 1.py  10*10*10.py  10*10*10.txt  10.py  11.py  12.py  1_1.py  1_InitialPosture_Plot.py  1_InitialPosture_Plot_2.py  1_InitialPosture_Plot_3.py  2.py  2_2.py  3.py  3_1.py  3_1_PlotAll.py  3_1_PlotAll1.py  3_1_PlotAll2.py  3_1_PlotAll3.py  3_1_PlotAll4.py  3_1_PlotAll5.py  3_1_PlotAll6.py  3_1_PlotAll6_example.py  3_1_PlotAll7.py  3_1_PlotAll7_example.py  3_1_PlotLeft.py  3_1_changeColor.py  3_1_changeColor2.py  3_1_plotV-W.py  3_oneTrajectory_Animation.py  8.py  InitialPosture_Plot_4.py  InitialPosture_Plot_4_example.py  Jacobian_linearization.m  SGA_mtp.py  VW_verify.py  alpha_alphaStar.m  feasible_velocity.py  forOptimal.py  jacobian.py  k3_solve.m  (+34 more)
motion_tracking_simulation/Matlab/: 4D_Visualize_example.m  Jacobian_linearization.m  Max_2Dfunction.m  Max_alphaStar.m  VDot_negativeResult.m  VDot_negativeResult_1.m  VDot_negativeResult_2.m  Visualize_V.m  alphaStar_alpha.m  alpha_alphaStar.m  append.m  derive_Constraint.m  feasible_space.m  helix.m  jacobian.m  k3_solve.m  left_scatter.m  linearization.m  meshgrid_test.m  phase_space_example.m  solve_Inequality.m  solve_Inequality2.m  test.m  test2.m  visualize_alphaStar.m
normal_cpp/: save_pcd.cpp  transform.cpp
normal_cpp/cluster_write/: package.xml
normal_cpp/realsense_pcl_1./: rs_pcl1
normal_cpp/region_growing_tutorial/: region_growing_tutorial.pcd
python_file/: HighPrecision_ADDA.py  test.py
src./: align2.cpp  cluster_write.cpp
src./cluster_write/: CMakeLists.txt
src./create_normal/: CMakeLists.txt  create_normal.cpp  package.xml
(+57 files in other folders)
